--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "method-override": "^3.0.0",
-    "mongoose": "^5.4.13"
+    "mongoose": "^5.4.13",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
