--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-handlebars": "^3.0.1",
     "express-session": "^1.15.6",
     "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.13",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
